--- a/app/src/main/res/layout/activity_visual_check.xml
+++ b/app/src/main/res/layout/activity_visual_check.xml
@@ -20,13 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingVertical="5dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,39 +33,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_brake_pedal_title"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            style="@style/ListMainTextViewStyle"
+                            android:text="@string/check_brake_pedal_title" />
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_brake_pedal_info"
-                            android:textSize="12sp" />
+                            style="@style/ListSubTextViewStyle"
+                            android:text="@string/check_brake_pedal_info"/>
                     </LinearLayout>
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#dddddd"
-                        android:text="@string/action_ok"
-                        android:textSize="16sp" />
+                        style="@style/ListOkButtonStyle" />
                 </LinearLayout>
 
                 <View
@@ -83,39 +64,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_park_title"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            style="@style/ListMainTextViewStyle"
+                            android:text="@string/check_park_title"/>
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_park_info"
-                            android:textSize="12sp" />
+                            style="@style/ListSubTextViewStyle"
+                            android:text="@string/check_park_info"/>
                     </LinearLayout>
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#dddddd"
-                        android:text="@string/action_ok"
-                        android:textSize="16sp" />
+                        style="@style/ListOkButtonStyle" />
                 </LinearLayout>
 
                 <View
@@ -126,39 +95,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_prime_mover_title"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            style="@style/ListMainTextViewStyle"
+                            android:text="@string/check_prime_mover_title"/>
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_prime_mover_info"
-                            android:textSize="12sp" />
+                            style="@style/ListSubTextViewStyle"
+                            android:text="@string/check_prime_mover_info" />
                     </LinearLayout>
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#dddddd"
-                        android:text="@string/action_ok"
-                        android:textSize="16sp" />
+                        style="@style/ListOkButtonStyle" />
                 </LinearLayout>
 
                 <View
@@ -169,39 +126,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_prime_mover_speed_title"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            style="@style/ListMainTextViewStyle"
+                            android:text="@string/check_prime_mover_speed_title"/>
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_prime_mover_speed_info"
-                            android:textSize="12sp" />
+                            style="@style/ListSubTextViewStyle"
+                            android:text="@string/check_prime_mover_speed_info"/>
                     </LinearLayout>
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#dddddd"
-                        android:text="@string/action_ok"
-                        android:textSize="16sp" />
+                        style="@style/ListOkButtonStyle" />
                 </LinearLayout>
 
                 <View
@@ -212,40 +157,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_window_washer_title"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            style="@style/ListMainTextViewStyle"
+                            android:text="@string/check_window_washer_title"/>
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_window_washer_info"
-                            android:textSize="12sp" />
+                            style="@style/ListSubTextViewStyle"
+                            android:text="@string/check_window_washer_info"/>
                     </LinearLayout>
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#dd0000"
-                        android:text="@string/action_ng"
-                        android:textColor="#ffffff"
-                        android:textSize="16sp" />
+                        style="@style/ListNgButtonStyle" />
                 </LinearLayout>
 
                 <View
@@ -256,40 +188,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_wiper_title"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            style="@style/ListMainTextViewStyle"
+                            android:text="@string/check_wiper_title"/>
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="@string/check_wiper_info"
-                            android:textSize="12sp" />
+                            style="@style/ListSubTextViewStyle"
+                            android:text="@string/check_wiper_info"/>
                     </LinearLayout>
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="#dd0000"
-                        android:text="@string/action_ng"
-                        android:textColor="#ffffff"
-                        android:textSize="16sp" />
+                        style="@style/ListNgButtonStyle" />
                 </LinearLayout>
 
                 <View
@@ -298,7 +217,6 @@
                     android:layout_margin="5dp"
                     android:background="@android:color/black" />
             </LinearLayout>
-        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
