--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,48 @@
         <item name="android:paddingLeft">5pt</item>
         <item name="android:paddingRight">5pt</item>
     </style>
+
+
+    <!-- list view style -->
+    <style name="ListTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">3</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="ListMainTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="ListSubTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="ListButtonStyle" parent="android:Widget.Button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="ListOkButtonStyle" parent="ListButtonStyle">
+        <item name="android:background">#DDDDDD</item>
+        <item name="android:text">@string/action_ok</item>
+    </style>
+
+    <style name="ListNgButtonStyle" parent="ListButtonStyle">
+        <item name="android:background">#DD0000</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:text">@string/action_ng</item>
+    </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:buttonStyle">@style/MyButtonStyle</item>
         <item name="editTextStyle">@style/MyEditTextStyle</item>
