--- a/app/src/main/res/layout/activity_call_confirm.xml
+++ b/app/src/main/res/layout/activity_call_confirm.xml
@@ -25,19 +25,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingVertical="5dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingVertical="5dp">
+                android:orientation="vertical">
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -54,9 +50,7 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
 
                 <LinearLayout
                     android:id="@+id/vital_sign_layout"
@@ -75,9 +69,7 @@
 
                 <View
                     android:id="@+id/vital_sign_separator"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
 
                 <LinearLayout
                     android:id="@+id/health_status_layout"
@@ -96,9 +88,7 @@
 
                 <View
                     android:id="@+id/health_status_separator"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
             </LinearLayout>
 
             <TextView
