--- a/app/src/main/res/layout/activity_day_check_show.xml
+++ b/app/src/main/res/layout/activity_day_check_show.xml
@@ -33,9 +33,7 @@
                 android:orientation="vertical">
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -52,9 +50,7 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -71,9 +67,7 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator" />
             </LinearLayout>
 
             <TextView
