--- a/app/src/main/res/layout/activity_visual_check.xml
+++ b/app/src/main/res/layout/activity_visual_check.xml
@@ -26,15 +26,13 @@
                 android:orientation="vertical">
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp" >
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -57,15 +55,13 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -88,15 +84,13 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -119,15 +113,13 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -150,15 +142,12 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
-
+                    style="@style/ListViewSeparator"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -181,15 +170,12 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
-
+                    style="@style/ListViewSeparator"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -212,10 +198,7 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="@android:color/black" />
+                    style="@style/ListViewSeparator"/>
             </LinearLayout>
     </ScrollView>
 
