--- a/app/src/main/res/layout/activity_vital_sign_measure.xml
+++ b/app/src/main/res/layout/activity_vital_sign_measure.xml
@@ -27,15 +27,13 @@
             android:orientation="vertical">
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_margin="5dp"
-                android:background="@android:color/black" />
+                style="@style/ListViewSeparator" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingVertical="5dp">
 
                 <TextView
                     style="@style/ListTextViewStyle"
@@ -47,15 +45,13 @@
             </LinearLayout>
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_margin="5dp"
-                android:background="@android:color/black" />
+                style="@style/ListViewSeparator" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingVertical="5dp">
 
                 <TextView
                     style="@style/ListTextViewStyle"
@@ -67,15 +63,13 @@
             </LinearLayout>
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_margin="5dp"
-                android:background="@android:color/black" />
+                style="@style/ListViewSeparator" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingVertical="5dp">
 
                 <TextView
                     style="@style/ListTextViewStyle"
@@ -87,10 +81,7 @@
             </LinearLayout>
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_margin="5dp"
-                android:background="@android:color/black" />
+                style="@style/ListViewSeparator" />
 
         </LinearLayout>
 
