--- a/app/src/main/res/layout/car_selector.xml
+++ b/app/src/main/res/layout/car_selector.xml
@@ -13,7 +13,7 @@
         android:textSize="@dimen/title_text_size"
         android:textStyle="bold" />
 
-    <View xmlns:android="http://schemas.android.com/apk/res/android"
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorGreen" />
@@ -25,10 +25,8 @@
         android:textSize="@dimen/title_text_size"
         android:textStyle="bold" />
 
-    <View xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/black" />
+    <View
+        style="@style/ListViewSeparator" />
 
     <LinearLayout
         android:layout_width="match_parent"
